--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Devin Downs",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mongoose": "^7.5.2"
+  }
 }
